--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,6 @@ dependencies {
 	compile fileTree(dir: 'libs', include: ['*.jar'])
 
 	compile 'com.android.support:appcompat-v7:25.1.0'
+	compile 'com.google.code.gson:gson:2.4'
 	compile 'com.loopj.android:android-async-http:1.4.9'
 }
