--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
 	compile 'com.android.support:appcompat-v7:25.1.0'
 	compile 'com.google.code.gson:gson:2.4'
 	compile 'com.loopj.android:android-async-http:1.4.9'
+	testCompile 'junit:junit:4.12'
 }
