--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,8 @@
 
 		<activity android:name="me.anon.grow.updater.ConfigureActivity" android:theme="@style/AppTheme">
 			<intent-filter>
-				<category android:name="me.anon.grow.ACTION_UPDATER" />
-				<action android:name="me.anon.grow.ADDON_CONFIGURATION" />
+				<category android:name="me.anon.grow.ADDON_CONFIGURATION" />
+				<action android:name="me.anon.grow.ACTION_UPDATER" />
 			</intent-filter>
 		</activity>
 
