--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
 		minSdkVersion 17
 		targetSdkVersion 28
 
-		versionCode 2
-		versionName "v1.0.1"
+		versionCode 3
+		versionName "v1.0.2"
 
 		manifestPlaceholders = [versionName: versionName]
 	}
@@ -23,10 +23,11 @@ android {
 }
 
 dependencies {
-	compile fileTree(dir: 'libs', include: ['*.jar'])
+	implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-	compile 'com.android.support:appcompat-v7:25.1.0'
-	compile 'com.google.code.gson:gson:2.4'
-	compile 'com.loopj.android:android-async-http:1.4.9'
-	testCompile 'junit:junit:4.12'
+	implementation 'com.android.support:appcompat-v7:28.0.0'
+	implementation 'com.android.support:support-compat:28.0.0'
+	implementation 'com.google.code.gson:gson:2.8.5'
+	implementation 'com.loopj.android:android-async-http:1.4.9'
+	testImplementation 'junit:junit:4.12'
 }
