--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-	compileSdkVersion 28
-	buildToolsVersion "28.0.3"
+	compileSdkVersion 29
+	buildToolsVersion "29.0.2"
 
 	defaultConfig {
 		applicationId "me.anon.grow.updater"
 
 		minSdkVersion 17
-		targetSdkVersion 28
+		targetSdkVersion 29
 
 		versionCode 3
 		versionName "v1.0.2"
@@ -25,8 +25,8 @@ android {
 dependencies {
 	implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-	implementation 'com.android.support:appcompat-v7:28.0.0'
-	implementation 'com.android.support:support-compat:28.0.0'
+	implementation 'androidx.appcompat:appcompat:1.0.2'
+	implementation 'androidx.core:core:1.0.2'
 	implementation 'com.google.code.gson:gson:2.8.5'
 	implementation 'com.loopj.android:android-async-http:1.4.9'
 	testImplementation 'junit:junit:4.12'
